Se arreglo la grilla

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <h2>Secretos de estilo y belleza aquí</h2>
         <p>Inscribete y recibe tips de moda directamente de mi</p>
         <div class="datos_clientes_areas-texto">
-            <input type="text" value="Nombre">
-            <input type="text" value="Apellidos">
-            <input type="email" value="Correo">
+            <input type="text" placeholder="Nombre">
+            <input type="text" placeholder="Apellidos">
+            <input type="email" placeholder="Correo">
             <button>Enviar</button>
         </div>
         <p>Al completar este formulario acepto recibir información dobre productos, servicios y recomendaciones por email </p>
