--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             </div>
             <div class="servicios_contenedor_cards">
                 <div>
-                    <img src="/img/corporative.jpg" alt="corporative consulting">
+                    <img src="/img/corporative.jpg" alt="Corporative consulting">
                     <a href="#" class="capa">
-                        <p>corporative consulting</p>
+                        <p>Corporative Consulting</p>
                     </a>
                 </div>
             </div>
@@ -133,5 +133,17 @@
             </div>
         </div>
     </section>
+    <!-- FOOTER -->
+    <footer>
+        <img src="" alt="Logo" class="logo">
+        <a href="#" class="serv_1">Personal Styling</a>
+        <a href="#" class="serv_2">Personal Shopper</a>
+        <a href="#" class="serv_3">Wardrobe Edit</a>
+        <a href="#" class="serv_4">Corporative Consulting</a>
+        <div class="redes">
+            <a href="#"><img src="/img/mail_blanco.png" alt="mail"></a>
+            <a href="#"><img src="/img/instagram_balnco.png" alt="instagram"></a>
+        </div>
+    </footer>
 </body>
 </html>
