Se acabó la cabecera de historia.html

--- a/historia.html
+++ b/historia.html
@@ -25,9 +25,7 @@
             </div>
         </header>
         <div class="cabecera_cuerpo">
-            <h1>¿No sabes que vas a vestir?</h1>
-            <p>Reserva una consulta individual y te ayudaré a hacer las paces con tu guardarropa</p>
-            <button> Contacto</button>
+            <h1>Mi Historia</h1>
         </div>
     </section>
 </body>
