Se acabó la pagina de hustoria

--- a/historia.html
+++ b/historia.html
@@ -28,5 +28,59 @@
             <h1>Mi Historia</h1>
         </div>
     </section>
+    <section class="introduccion">
+        <h2>"No tengo nada <br/>que vestir"</h2>
+        <p>Estoy bastante seguro de que tú, como yo, has dicho al menos una vez <strong>"No tengo nada que ponerme".</strong> <br/><br/>También estoy bastante seguro de que no era verdad. Entonces, ¿por qué lo decimos? ¿Y qué significa realmente cuando alguien dice "no tengo nada que ponerme"? Creo que lo que en realidad estamos diciendo es <strong>"me siento inseguro acerca de mí mismo"</strong> o <strong>"no sé qué ponerme para la situación para la que me estoy vistiendo"</strong> o <strong>"necesito un cambio".</strong><br/><br/> Así que aquí estoy, para inspirarte y ayudarte a hacer ese cambio, sentirte empoderado y seguro - todo a partir de tu apariencia.</p>
+    </section>
+    <section class="presentacion">
+        <div class="presentacion_contenedor">
+            <h2>Hola, Soy Lisset ...</h2>
+            <div class="presentacion_contenedor_texto">
+                <img src="/img/corporative.jpg" alt="presentacion">
+                <p>"Empecé a respirar moda desde el momento en que nací. En mi familia, la moda no es solo una pasión, sino también un negocio para tres generaciones. <br/><br/> En la década de 1950, mi abuelo fundó un showroom de marcas múltiples, que mi padre luego hizo crecer internacionalmente y donde comenzó mi carrera en la moda. <br/><br/> Aunque estaba orgullosa de ser parte del negocio familiar, decidí perseguir mi propio sueño: vivir en una capital de la moda y trabajar para las marcas más icónicas. <br/><br/> Me fui a Londres, donde comencé desde abajo, pero con dedicación y trabajo duro me hice un nombre en la industria, trabajando para marcas como Prada y Alaia.<br/><br/><br/><br/> Después de diez años como estilista y consultora de moda, me di cuenta de que lo que realmente me hacía feliz no era el lujo, la belleza o el glamour de los desfiles de moda, sino dar alegría a las personas con mi trabajo. Poder marcar la diferencia para ellos, no solo en la forma en que se visten, sino en cómo se sienten consigo mismos. <br/><br/> Esto es lo que me llevó a la decisión de convertirme en estilista de moda independiente y comenzar mi propio negocio que va más allá de la moda. Mi objetivo es ayudar a todos a ganar confianza en su estilo a través del desarrollo de relaciones a largo plazo. Quiero educar y proporcionar orientación hasta que esa persona se vuelva progresivamente independiente en la decisión de qué ropa usar y cómo estilizarla, para expresar su verdadera personalidad."
+
+                    ¡Todo sobre encontrar la confianza y la alegría a través de la moda!</p>
+            </div>
+            <div class="redes">
+                <a href="#">
+                    <img src="/img/email.png" alt="mail">
+                </a>
+                <a href="#">
+                    <img src="/img/logotipo-de-instagram.png" alt="instagram">
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="puedo_ayudarte">
+        <h2>Como puedo ayudarte</h2>
+        <div class="puedo_ayudarte_contenedor_imagen">
+            <div class="contenedor_img">
+                <img src="/img/portada.png" alt="">
+            </div>
+            <div class="servicios">
+                <h3>Explora mis<br/>servicios</h3>
+                <ul>
+                    <a href="#"><li>Personal Styling</li></a>
+                    <a href="#"><li>Personal Shopper</li></a>
+                    <a href="#"><li>Wardrobe Edit</li></a>
+                    <a href="#"><li>Corporative Consulting</li></a>
+                </ul>
+            </div>
+        </div>
+        <p>Te ayudaré a redescubrir tu feminidad, ganar confianza y lucir estilosa sin esfuerzo, tanto con tu ropa vieja como con la nueva. ¿Lista para sentirte hermosa de nuevo?</p>
+        <div class="contenedor_btn"><button>Contacto</button></div>
+    </section>
+    <!-- FOOTER -->
+    <footer>
+        <img src="" alt="Logo" class="logo">
+        <a href="#" class="serv_1">Personal Styling</a>
+        <a href="#" class="serv_2">Personal Shopper</a>
+        <a href="#" class="serv_3">Wardrobe Edit</a>
+        <a href="#" class="serv_4">Corporative Consulting</a>
+        <div class="redes">
+            <a href="#"><img src="/img/mail_blanco.png" alt="mail"></a>
+            <a href="#"><img src="/img/instagram_balnco.png" alt="instagram"></a>
+        </div>
+    </footer>
 </body>
 </html>
