se agrego link al logo para regresar al home

--- a/historia.html
+++ b/historia.html
@@ -10,7 +10,7 @@
     <section class="cabecera">
         <header class="cabecera_header">
             <div class="cabecera_heder_logo">
-                <img src="#" alt="logo">
+                <a href="index.html"><img src="#" alt="logo"></a>
             </div>
             <div class="cabecera_header_menu">
                 <a href="#">Servicios</a>
