--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <section class="cabecera">
         <header class="cabecera_header">
             <div class="cabecera_heder_logo">
-                <img src="#" alt="logo">
+                <a href="index.html"><img src="#" alt="logo"></a>
             </div>
             <div class="cabecera_header_menu">
                 <a href="#">Servicios</a>
-                <a href="#">Mi historia</a>
+                <a href="/historia.html">Mi Historia</a>
                 <a href="#">Contacto</a>
                 <a href="#">
                     <img src="/img/mail_blanco.png" alt="mail">
