Se creo la página de servicios

--- a/historia.html
+++ b/historia.html
@@ -13,8 +13,8 @@
                 <a href="index.html"><img src="#" alt="logo"></a>
             </div>
             <div class="cabecera_header_menu">
-                <a href="#">Servicios</a>
-                <a href="#">Mi historia</a>
+                <a href="servicios.html">Servicios</a>
+                <a href="historia.html">Mi historia</a>
                 <a href="#">Contacto</a>
                 <a href="#">
                     <img src="/img/mail_blanco.png" alt="mail">
@@ -61,7 +61,7 @@
                 <h3>Explora mis<br/>servicios</h3>
                 <ul>
                     <a href="#"><li>Personal Styling</li></a>
-                    <a href="#"><li>Personal Shopper</li></a>
+                    <a href="servicios.html#personal_shopper"><li>Personal shopping</li></a>
                     <a href="#"><li>Wardrobe Edit</li></a>
                     <a href="#"><li>Corporative Consulting</li></a>
                 </ul>
@@ -74,7 +74,7 @@
     <footer>
         <img src="" alt="Logo" class="logo">
         <a href="#" class="serv_1">Personal Styling</a>
-        <a href="#" class="serv_2">Personal Shopper</a>
+        <a href="servicios.html#personal_shopper" class="serv_2">Personal shopping</a>
         <a href="#" class="serv_3">Wardrobe Edit</a>
         <a href="#" class="serv_4">Corporative Consulting</a>
         <div class="redes">
