--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html"><img src="#" alt="logo"></a>
             </div>
             <div class="cabecera_header_menu">
-                <a href="#">Servicios</a>
+                <a href="servicios.html">Servicios</a>
                 <a href="/historia.html">Mi Historia</a>
                 <a href="#">Contacto</a>
                 <a href="#">
@@ -51,9 +51,9 @@
             </div>
             <div class="servicios_contenedor_cards">
                 <div>
-                    <img src="/img/personal_shopper.JPEG" alt="personal shopper">
-                    <a href="#" class="capa">
-                        <p>Personal Shopper</p>
+                    <img src="/img/personal_shopper.JPEG" alt="personal shopping">
+                    <a href="servicios.html#personal_shopper" class="capa">
+                        <p>Personal shopping</p>
                     </a>
                 </div>
             </div>
@@ -137,7 +137,7 @@
     <footer>
         <img src="" alt="Logo" class="logo">
         <a href="#" class="serv_1">Personal Styling</a>
-        <a href="#" class="serv_2">Personal Shopper</a>
+        <a href="servicios.html#personal_shopper" class="serv_2">Personal shopping</a>
         <a href="#" class="serv_3">Wardrobe Edit</a>
         <a href="#" class="serv_4">Corporative Consulting</a>
         <div class="redes">
