Solo falta el formulario de contacto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="cabecera_header_menu">
                 <a href="servicios.html">Servicios</a>
                 <a href="/historia.html">Mi Historia</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
                 <a href="#">
                     <img src="/img/mail_blanco.png" alt="mail">
                 </a>
@@ -27,7 +27,7 @@
         <div class="cabecera_cuerpo">
             <h1>¿No sabes que vas a vestir?</h1>
             <p>Reserva una consulta individual y te ayudaré a hacer las paces con tu guardarropa</p>
-            <button> Contacto</button>
+            <button id="btn_contacto" onclick="location.href='contacto.html'">Contacto</button>
         </div>
     </section>
     <section class="bienvenida">
@@ -44,8 +44,8 @@
             <div class="servicios_contenedor_cards">
                 <div>
                     <img src="/img/personal_styling.jpg" alt="personal styling">
-                    <a href="#" class="capa">
-                        <p>personal styling</p>
+                    <a href="/servicios.html#personal_styling" class="capa">
+                        <p>Personal Styling</p>
                     </a>
                 </div>
             </div>
@@ -53,14 +53,14 @@
                 <div>
                     <img src="/img/personal_shopper.JPEG" alt="personal shopping">
                     <a href="servicios.html#personal_shopper" class="capa">
-                        <p>Personal shopping</p>
+                        <p>Personal Shopping</p>
                     </a>
                 </div>
             </div>
             <div class="servicios_contenedor_cards">
                 <div>
                     <img src="/img/wardof.JPG" alt="Wardrobe Edit">
-                    <a href="#" class="capa">
+                    <a href="/servicios.html#wardrobe_edit" class="capa">
                         <p>Wardrobe Edit</p>
                     </a>
                 </div>
@@ -68,7 +68,7 @@
             <div class="servicios_contenedor_cards">
                 <div>
                     <img src="/img/corporative.jpg" alt="Corporative consulting">
-                    <a href="#" class="capa">
+                    <a href="/servicios.html#corporative_consulting" class="capa">
                         <p>Corporative Consulting</p>
                     </a>
                 </div>
@@ -136,14 +136,15 @@
     <!-- FOOTER -->
     <footer>
         <img src="" alt="Logo" class="logo">
-        <a href="#" class="serv_1">Personal Styling</a>
+        <a href="servicios.html#personal_styling" class="serv_1">Personal Styling</a>
         <a href="servicios.html#personal_shopper" class="serv_2">Personal shopping</a>
-        <a href="#" class="serv_3">Wardrobe Edit</a>
-        <a href="#" class="serv_4">Corporative Consulting</a>
+        <a href="servicios.html#wardrobe_edit" class="serv_3">Wardrobe Edit</a>
+        <a href="servicios.html#corporative_consulting" class="serv_4">Corporative Consulting</a>
         <div class="redes">
             <a href="#"><img src="/img/mail_blanco.png" alt="mail"></a>
             <a href="#"><img src="/img/instagram_balnco.png" alt="instagram"></a>
         </div>
     </footer>
+
 </body>
 </html>
