--- a/historia.html
+++ b/historia.html
@@ -15,7 +15,7 @@
             <div class="cabecera_header_menu">
                 <a href="servicios.html">Servicios</a>
                 <a href="historia.html">Mi historia</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
                 <a href="#">
                     <img src="/img/mail_blanco.png" alt="mail">
                 </a>
@@ -60,10 +60,10 @@
             <div class="servicios">
                 <h3>Explora mis<br/>servicios</h3>
                 <ul>
-                    <a href="#"><li>Personal Styling</li></a>
+                    <a href="servicios.html#personal_styling"><li>Personal Styling</li></a>
                     <a href="servicios.html#personal_shopper"><li>Personal shopping</li></a>
-                    <a href="#"><li>Wardrobe Edit</li></a>
-                    <a href="#"><li>Corporative Consulting</li></a>
+                    <a href="servicios.html#wardrobe_edit"><li>Wardrobe Edit</li></a>
+                    <a href="servicios.html#corporative_consulting"><li>Corporative Consulting</li></a>
                 </ul>
             </div>
         </div>
@@ -73,10 +73,10 @@
     <!-- FOOTER -->
     <footer>
         <img src="" alt="Logo" class="logo">
-        <a href="#" class="serv_1">Personal Styling</a>
+        <a href="servicios.html#personal_styling" class="serv_1">Personal Styling</a>
         <a href="servicios.html#personal_shopper" class="serv_2">Personal shopping</a>
-        <a href="#" class="serv_3">Wardrobe Edit</a>
-        <a href="#" class="serv_4">Corporative Consulting</a>
+        <a href="servicios.html#wardrobe_edit" class="serv_3">Wardrobe Edit</a>
+        <a href="servicios.html#corporative_consulting" class="serv_4">Corporative Consulting</a>
         <div class="redes">
             <a href="#"><img src="/img/mail_blanco.png" alt="mail"></a>
             <a href="#"><img src="/img/instagram_balnco.png" alt="instagram"></a>
