--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="cabecera">
         <header class="cabecera_header">
             <div class="cabecera_heder_logo">
-                <a href="index.html"><img src="#" alt="logo"></a>
+                <a href="index.html"><img src="/img/Logo_blanco-removebg-preview.png" alt="logo" class="header_logo"></a>
             </div>
             <div class="cabecera_header_menu">
                 <a href="servicios.html">Servicios</a>
@@ -135,7 +135,7 @@
     </section>
     <!-- FOOTER -->
     <footer>
-        <img src="" alt="Logo" class="logo">
+        <img src="/img/Logo_blanco-removebg-preview.png" alt="Logo" class="logo_footer">
         <a href="servicios.html#personal_styling" class="serv_1">Personal Styling</a>
         <a href="servicios.html#personal_shopper" class="serv_2">Personal shopping</a>
         <a href="servicios.html#wardrobe_edit" class="serv_3">Wardrobe Edit</a>
